[package]
name = "ip-nlroute-cli"

description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
ip-nlroute = { path = "../ip-nlroute" }
