[package]
name = "ip-nlroute"

description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
neli = "0.7"
nix = { version = "0.31", features = ["net"] }
thiserror = "2"
