[package]
name = "ip-nlroute"

description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
thiserror = "2"


[target.'cfg(target_os = "linux")'.dependencies]
neli = { version = "0.7", optional = true }
nix = { version = "0.31", features = ["net"], optional = true }

[features]
netlink = ["neli", "nix"]
default = ["netlink"]
